# nitbot

./: .gitignore  LICENSE  README.md  bible_en.pickle  nitbot.py  pyproject.toml  requirements.txt
